force-app/main/default/objects/Term_Grade__c/Term_Grade__c.object-meta.xml
<CustomObject>
    <description>Stores student grades for a specific grading period within a Term.</description>
    <label>Term Grade</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>Term Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>