force-app/main/default/objects/Term_Grade__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The class in which the student received this grade. The Contact and Course Offering on Term Grade must match the Contact and Course Offering on the Course Connection record.</description>
    <inlineHelpText>The class in which the student received this grade. The Contact and Course Offering on Term Grade must match the Contact and Course Offering on the Course Connection record.</inlineHelpText>
    <label>Course Connection</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Term Grades</relationshipLabel>
    <relationshipName>Term_Grades</relationshipName>
    <type>Lookup</type>
</CustomField>