force-app/main/default/objects/Term_Grade__c/fields/Credits_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Credits_Attempted__c</fullName>
    <description>The number of credits available this Term for this Course.</description>
    <inlineHelpText>The number of credits available this Term for this Course.</inlineHelpText>
    <label>Credits Attempted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>