force-app/main/default/objects/Term_Grade__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <description>The number of credits the student earned this term for this course.</description>
    <inlineHelpText>The number of credits the student earned this term for this course.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>