force-app/main/default/objects/Term_Grade__c/fields/Letter_Grade__c.field-meta.xml
<CustomField>
    <fullName>Letter_Grade__c</fullName>
    <description>If your school uses letter grades, enter the letter grade the student earned, for example, A, B, C, etc.</description>
    <inlineHelpText>If your school uses letter grades, enter the letter grade the student earned, for example, A, B, C, etc.</inlineHelpText>
    <label>Letter Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>