force-app/main/default/objects/Term_Grade__c/fields/Numerical_Grade__c.field-meta.xml
<CustomField>
    <fullName>Numerical_Grade__c</fullName>
    <description>If your school uses numeric grades, enter the numeric grade the student earned.</description>
    <inlineHelpText>If your school uses numeric grades, enter the numeric grade the student earned.</inlineHelpText>
    <label>Numerical Grade</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>