force-app/main/default/objects/Term_Grade__c/fields/Term_Grade_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Grade_Type__c</fullName>
    <description>The type of grading period that this grade is for, for example, Mid-Term Grade, Final Grade, Exam Grade, Grading Period.</description>
    <inlineHelpText>The type of grading period that this grade is for, for example, Mid-Term Grade, Final Grade, Exam Grade, Grading Period.</inlineHelpText>
    <label>Term Grade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exam Grade</fullName>
            </value>
            <value>
                <fullName>Final Grade</fullName>
            </value>
            <value>
                <fullName>Grading Period</fullName>
            </value>
            <value>
                <fullName>Mid-Term Grade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>